--- a/src/css/dialog.less
+++ b/src/css/dialog.less
@@ -1,7 +1,9 @@
 :deep(.el-dialog__header){
   padding-top: 0 !important;
 }
-
+.el-dialog{
+  box-shadow: 0px 0px 8px 0px #f6f6f6 !important ;
+}
 .jx-dialog-header{
   height: 30px;
   display: flex;
